# google-oauth-app

./: .editorconfig  .gitignore  AGENTS.md  Makefile  README.md  docker-compose.yml  progress.md  task.md
.github/: pull_request_template.md
.github/workflows/: ci.yml
backend/: .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml
backend/app/: main.py
backend/app/api/: router.py
backend/app/api/routes/: google_oauth.py  health.py
backend/app/core/: config.py
backend/app/domain/: google_oauth.py
backend/app/infrastructure/: google_oauth_client.py  supabase_oauth_repository.py
backend/app/services/: google_oauth_service.py  token_cipher.py
backend/scripts/: check_google_oauth_connection.py  inspect_google_oauth_data.py
backend/tests/: test_google_oauth.py  test_health.py  test_inspect_google_oauth_data.py
docs/: google-oauth-design.md  google-oauth-ga4-search-console.md  google-oauth-implementation-spec.md
frontend/: .env.example  Dockerfile  README.md  biome.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
supabase/: README.md  config.toml  seed.sql
supabase/migrations/: 20260521164500_google_oauth_connections.sql  20260525180300_google_oauth_connections_unique_email.sql
